# thesis

./: README.md
cfg/: ._LESMEG.txt  LESMEG.txt  obj.data  obj.names  test.txt  train.txt  yolov3-Utkikk9000.cfg
main/: CMakeLists.txt  funksjoner.h  main.cpp
python scripts/: CLR.py  create_train-test.py  flipImages.py  imgaug.py  plot_mAP.py  rename.py
